<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ghost_white"
    tools:context=".Recipes.ChangePasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:elevation="1dp">

            <TextView
                android:id="@+id/profile_header_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/change_password"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@color/ghost_white"
                android:padding="10dp" />

            <TextView
                android:id="@+id/straightLine1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:alpha="0.1"
                android:background="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/oldPasswordV"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/current_password"
                app:boxStrokeColor="@color/blue"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:helperText=""
                app:helperTextEnabled="true"
                app:hintTextColor="@color/blue"
                app:passwordToggleDrawable="@drawable/custom_eye"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="17sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPasswordV"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/new_password"
                app:boxStrokeColor="@color/blue"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:helperText=""
                app:helperTextEnabled="true"
                app:hintTextColor="@color/blue"
                app:passwordToggleDrawable="@drawable/custom_eye"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="17sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordV"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/confirm_password"
                app:boxStrokeColor="@color/blue"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:helperText=""
                app:helperTextEnabled="true"
                app:hintTextColor="@color/blue"
                app:passwordToggleDrawable="@drawable/custom_eye"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="17sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/changePasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/black_bg_btn"
                android:backgroundTint="@color/blueIsh"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/change"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/backToProfileBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/black_bg_btn"
                android:backgroundTint="@color/blueIsh"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:backgroundTint="@null" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>