<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/rpwBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:srcCompat="@drawable/ic_back_button_24"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:gravity="left"
                android:text="@string/recover_password"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recoverPassword_emailV"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginTop="45sp"
            android:layout_marginEnd="32sp"
            android:hint="@string/email_address"
            app:boxStrokeColor="@color/blue"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:helperText=""
            app:hintTextColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recoverPassword_emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="10sp"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/recoverPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:background="@drawable/black_bg_btn"
            android:text="@string/recover"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:backgroundTint="@null" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>